[package]
name = "buddy_system_allocator"
description = "A bare metal allocator that uses buddy system."
documentation = "https://docs.rs/buddy_system_allocator"
homepage = "https://github.com/rcore-os/buddy_system_allocator"
repository = "https://github.com/rcore-os/buddy_system_allocator"
keywords = ["allocator", "no_std", "heap"]
version = "0.11.0"
authors = [
  "Jiajie Chen <c@jia.je>",
  "Vinay Chandra Dommeti <github@vinay.vc>",
  "Andrew Walbran <qwandor@google.com>",
]
edition = "2021"
license = "MIT"

[features]
default = ["alloc", "use_spin"]
alloc = []
use_spin = ["spin"]

[dependencies.spin]
version = "0.10.0"
optional = true
default-features = false
features = ["spin_mutex"]

[dev-dependencies]
criterion = "0.6.0"
ctor = "0.4.2"
rand = "0.9.2"
rand_chacha = "0.9.0"

[[bench]]
name = "memory_allocator_benchmark"
harness = false
